packages/rune/fixtures/corpus/invalid/req-core.rune
[REQ:core] order.place(InDto): OutDto
    db:order.save(InDto): OutDto
      timeout
    [RET] OutDto

[DTO] InDto: a
    in

[DTO] OutDto: b
    out
